Add .obj mesh serialization and cvar system based on vkguide.dev cvar system

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -23,7 +23,7 @@ set_property(TARGET Sunset PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE
 
 target_include_directories(Sunset PUBLIC ${INCLUDE_DIRS})
 
-target_link_libraries(Sunset vkbootstrap vma glm tinyobjloader imgui stb_image lz4 json)
+target_link_libraries(Sunset vkbootstrap vma glm imgui lz4 json)
 target_link_libraries(Sunset Vulkan::Vulkan sdl2 AssetSerializer)
 
 ## find all the shader files under the shaders folder
