--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -26,33 +26,7 @@ target_include_directories(Sunset PUBLIC ${INCLUDE_DIRS})
 target_link_libraries(Sunset vkbootstrap vma glm imgui lz4 json spirv_reflect)
 target_link_libraries(Sunset Vulkan::Vulkan sdl2 AssetSerializer Tracy::TracyClient)
 
-## find all the shader files under the shaders folder
-file(GLOB_RECURSE GLSL_SOURCE_FILES
-    "${CMAKE_CURRENT_SOURCE_DIR}/shaders/*.frag"
-    "${CMAKE_CURRENT_SOURCE_DIR}/shaders/*.vert"
-    "${CMAKE_CURRENT_SOURCE_DIR}/shaders/*.comp"
-    )
-
-## iterate each shader
-foreach(GLSL ${GLSL_SOURCE_FILES})
-  message(STATUS "BUILDING SHADER")
-  get_filename_component(FILE_NAME ${GLSL} NAME)
-  set(SPIRV "${CMAKE_CURRENT_SOURCE_DIR}/shaders/${FILE_NAME}.spv")
-  message(STATUS ${GLSL})
-  ##execute glslang command to compile that specific shader
-  add_custom_command(
-    OUTPUT ${SPIRV}
-    COMMAND ${GLSL_VALIDATOR} -V ${GLSL} -o ${SPIRV}
-    DEPENDS ${GLSL})
-  list(APPEND SPIRV_BINARY_FILES ${SPIRV})
-endforeach(GLSL)
-
-add_custom_target(
-    Shaders 
-    DEPENDS ${SPIRV_BINARY_FILES}
-    )
-
-add_dependencies(Sunset Shaders CookerRun)
+add_dependencies(Sunset CookerRun)
 
 add_custom_command(TARGET ${SUNSET_LIB} POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy "C:/SDL2/lib/x64/SDL2.dll" ${ENGINE_DIR}/bin/$<CONFIG>/SDL2.dll
