Basic setup for multi-section meshes, so that multiple material support can be rolled out

--- a/engine/tools/apps/CMakeLists.txt
+++ b/engine/tools/apps/CMakeLists.txt
@@ -14,7 +14,7 @@ target_include_directories(SunsetCooker PUBLIC
 	${CMAKE_CURRENT_SOURCE_DIR}/cooker
 	${CMAKE_CURRENT_SOURCE_DIR}/../libs/asset_serializer)
 
-target_link_libraries(SunsetCooker PRIVATE tinyobjloader stb_image json lz4 glm AssetSerializer shaderc)
+target_link_libraries(SunsetCooker PRIVATE tinyobjloader stb_image json lz4 glm AssetSerializer shaderc open_fbx)
 
 set(EQUIRECT_SOURCES
 	${CMAKE_CURRENT_SOURCE_DIR}/equirectangular_map_tools/equirect_tools.h
