Remove Volk + Some test target changes

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -9,6 +9,19 @@ MACRO(HEADER_DIRECTORIES return_list base_path)
     SET(${return_list} ${dir_list})
 ENDMACRO()
 
+macro(create_source_group)
+    foreach(_source IN ITEMS ${ARGN})
+        if(IS_ABSOLUTE "${_source}")
+            file(RELATIVE_PATH _source_rel "${CMAKE_CURRENT_SOURCE_DIR}" "${_source}")
+        else()
+            set(_source_rel "${_source}")
+        endif()
+        get_filename_component(_source_path "${_source_rel}" PATH)
+        string(REPLACE "/" "\\" _group_path "${_source_path}")
+        source_group("${_group_path}" FILES "${_source}")
+    endforeach()
+endmacro()
+
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "src/*.h" "src/*.cpp" "shaders/*.vert" "shaders/*.frag" "shaders/*.inc" "shaders/*.comp")
 
 HEADER_DIRECTORIES(INCLUDE_DIRS src)
@@ -16,7 +29,6 @@ HEADER_DIRECTORIES(INCLUDE_DIRS src)
 list(APPEND INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/third_party")
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/tests")
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/tools/libs")
 
 add_library(Sunset STATIC ${SOURCES})
@@ -34,3 +46,7 @@ add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/tools/apps")
 add_custom_command(TARGET ${SUNSET_LIB} POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/third_party/sdl2/lib/x64/SDL2.dll" ${ENGINE_DIR}/bin/$<CONFIG>/SDL2.dll
                   )
+
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/tests")
+
+create_source_group(${SOURCES})
