--- a/engine/tests/CMakeLists.txt
+++ b/engine/tests/CMakeLists.txt
@@ -1,5 +1,3 @@
-enable_testing()
-
 file(GLOB_RECURSE TEST_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 
 add_executable(SunsetTests ${TEST_SOURCES})
@@ -9,4 +7,4 @@ target_include_directories(SunsetTests PUBLIC ${INCLUDE_DIRS})
 target_link_libraries(SunsetTests Sunset benchmark::benchmark GTest::gtest_main)
 
 include(GoogleTest)
-gtest_discover_tests(SunsetTests)
+gtest_discover_tests(SunsetTests DISCOVER_MODE PRE_TEST)
